# lupe

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
proto/: db.proto  duckdb.proto
src/: main.rs
src/cmd/: clean.rs  client.rs  load.rs  mod.rs  query.rs  server.rs
src/db/: alb.rs  mod.rs
src/pb/: mod.rs
src/proto/: mod.rs
src/repo/: alb.rs  mod.rs  s3.rs
src/util/: db_schema.rs  mod.rs  named_pipe.rs  uds.rs
