[package]
name = "lupe"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.3"
duckdb = { version = "1.1.1", features = ["bundled"] }
hyper-util = "0.1.10"
prost = "0.13.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal", "process"] }
tonic = "0.12.3"
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
typed-builder = "0.20.0"

[build-dependencies]
tonic-build = "0.12.3"
